@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2023. Axon Framework
+ * Copyright (c) 2010-2024. Axon Framework
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,7 +43,6 @@ import org.axonframework.serialization.upcasting.event.ContextAwareSingleEventUp
 import org.axonframework.serialization.upcasting.event.EventUpcaster;
 import org.axonframework.serialization.upcasting.event.IntermediateEventRepresentation;
 import org.axonframework.serialization.xml.XStreamSerializer;
-import org.axonframework.tracing.NoOpSpanFactory;
 import org.axonframework.tracing.TestSpanFactory;
 import org.junit.jupiter.api.*;
 
@@ -58,12 +57,13 @@ import java.util.function.Function;
 import java.util.stream.Stream;
 
 import static org.axonframework.axonserver.connector.utils.AssertUtils.assertWithin;
+import static org.axonframework.messaging.QualifiedName.dottedName;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 /**
- * Test class validating the {@link AxonServerEventStore}
+ * Test class validating the {@link AxonServerEventStore}.
  *
  * @author Marc Gathier
  */
@@ -128,9 +128,7 @@ class AxonServerEventStoreTest {
                 GenericEventMessage.asEventMessage("Test2"),
                 GenericEventMessage.asEventMessage("Test3")};
         testSubject.publish(eventMessages);
-        Arrays.stream(eventMessages).forEach(e -> {
-            testSpanFactory.verifySpanCompleted("EventBus.publishEvent", e);
-        });
+        Arrays.stream(eventMessages).forEach(e -> testSpanFactory.verifySpanCompleted("EventBus.publishEvent", e));
         testSpanFactory.verifyNotStarted("EventBus.commitEvents");
         uow.commit();
         testSpanFactory.verifySpanCompleted("EventBus.commitEvents");
@@ -170,9 +168,11 @@ class AxonServerEventStoreTest {
             Stream<IntermediateEventRepresentation> si = invocation.getArgument(0);
             return si.flatMap(i -> Stream.of(i, i));
         });
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3"));
+        testSubject.publish(
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3")
+        );
 
         DomainEventStream actual = testSubject.readEvents(AGGREGATE_ID);
         assertTrue(actual.hasNext());
@@ -192,10 +192,15 @@ class AxonServerEventStoreTest {
             Stream<IntermediateEventRepresentation> si = invocation.getArgument(0);
             return si.flatMap(i -> Stream.of(i, i));
         });
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3"));
-        testSubject.storeSnapshot(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1"));
+        testSubject.publish(
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3")
+        );
+        DomainEventMessage<String> snapshotEvent = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1"
+        );
+        testSubject.storeSnapshot(snapshotEvent);
 
         // snapshot storage is async, so we need to make sure the first event is the snapshot
         assertWithin(2, TimeUnit.SECONDS, () -> {
@@ -215,15 +220,20 @@ class AxonServerEventStoreTest {
     @Test
     void loadEventsWithContextAwareUpcaster() {
         reset(upcasterChain);
-        ContextAwareSingleEventUpcaster<AtomicInteger> upcaster = new ContextAwareSingleEventUpcaster<AtomicInteger>() {
+        ContextAwareSingleEventUpcaster<AtomicInteger> upcaster = new ContextAwareSingleEventUpcaster<>() {
             @Override
-            protected boolean canUpcast(IntermediateEventRepresentation intermediateRepresentation, AtomicInteger context) {
+            protected boolean canUpcast(IntermediateEventRepresentation intermediateRepresentation,
+                                        AtomicInteger context) {
                 return true;
             }
 
             @Override
-            protected IntermediateEventRepresentation doUpcast(IntermediateEventRepresentation intermediateRepresentation, AtomicInteger context) {
-                return intermediateRepresentation.upcast(intermediateRepresentation.getType(), String.class, Function.identity(), m -> m.and("counter", context.getAndIncrement()));
+            protected IntermediateEventRepresentation doUpcast(
+                    IntermediateEventRepresentation intermediateRepresentation, AtomicInteger context) {
+                return intermediateRepresentation.upcast(intermediateRepresentation.getType(),
+                                                         String.class,
+                                                         Function.identity(),
+                                                         m -> m.and("counter", context.getAndIncrement()));
             }
 
             @Override
@@ -232,9 +242,11 @@ class AxonServerEventStoreTest {
             }
         };
         when(upcasterChain.upcast(any())).thenAnswer(i -> upcaster.upcast(i.getArgument(0)));
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2"),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3"));
+        testSubject.publish(
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2"),
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3")
+        );
 
         DomainEventStream actual = testSubject.readEvents(AGGREGATE_ID);
         assertTrue(actual.hasNext());
@@ -256,30 +268,43 @@ class AxonServerEventStoreTest {
 
     @Test
     void usingLocalEventStoreOnOpeningStream() {
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1"));
+        DomainEventMessage<String> testEvent =
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1");
+        testSubject.publish(testEvent);
         testSubject.openStream(null);
         assertWithin(1, TimeUnit.SECONDS, () -> assertEquals(1, eventStore.getEventsRequests().size()));
-        assertFalse(eventStore.getEventsRequests().get(0).getForceReadFromLeader());
+        assertFalse(eventStore.getEventsRequests().getFirst().getForceReadFromLeader());
     }
 
     @Test
     void usingLocalEventStoreOnQueryingEvents() {
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1"));
+        DomainEventMessage<String> testEvent =
+                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1");
+        testSubject.publish(testEvent);
         testSubject.query("", true);
         assertWithin(1, TimeUnit.SECONDS,
                      () -> assertEquals(1, eventStore.getQueryEventsRequests().size()));
-        assertFalse(eventStore.getQueryEventsRequests().get(0).getForceReadFromLeader());
+        assertFalse(eventStore.getQueryEventsRequests().getFirst().getForceReadFromLeader());
     }
 
     @Test
     void readEventsReturnsSnapshotsAndEventsWithMetaData() {
         Map<String, String> testMetaData = Collections.singletonMap("key", "value");
-        testSubject.storeSnapshot(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1", testMetaData)
+        DomainEventMessage<String> testSnapshot = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1", testMetaData
         );
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3", testMetaData));
+        DomainEventMessage<String> testEventOne = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1", testMetaData
+        );
+        DomainEventMessage<String> testEventTwo = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2", testMetaData
+        );
+        DomainEventMessage<String> testEventThree = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3", testMetaData
+        );
+
+        testSubject.storeSnapshot(testSnapshot);
+        testSubject.publish(testEventOne, testEventTwo, testEventThree);
 
         // Snapshot storage is async, so we need to make sure the first event is the snapshot
         assertWithin(2, TimeUnit.SECONDS, () -> {
@@ -308,12 +333,21 @@ class AxonServerEventStoreTest {
     @Test
     void readEventsWithSequenceNumberIgnoresSnapshots() {
         Map<String, String> testMetaData = Collections.singletonMap("key", "value");
-        testSubject.storeSnapshot(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1", testMetaData)
+        DomainEventMessage<String> testSnapshot = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1", testMetaData
         );
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3", testMetaData));
+        DomainEventMessage<String> testEventOne = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1", testMetaData
+        );
+        DomainEventMessage<String> testEventTwo = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2", testMetaData
+        );
+        DomainEventMessage<String> testEventThree = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3", testMetaData
+        );
+
+        testSubject.storeSnapshot(testSnapshot);
+        testSubject.publish(testEventOne, testEventTwo, testEventThree);
 
         // Snapshot storage is async, so we need to make sure the first event through "readEvents" is the snapshot
         assertWithin(2, TimeUnit.SECONDS, () -> {
@@ -361,12 +395,21 @@ class AxonServerEventStoreTest {
     @Test
     void readEventsWithMagicSequenceNumberAndSnapshotFilterSetIgnoresSnapshots() {
         Map<String, String> testMetaData = Collections.singletonMap("key", "value");
-        testSubject.storeSnapshot(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1", testMetaData)
+        DomainEventMessage<String> testSnapshot = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1", testMetaData
         );
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3", testMetaData));
+        DomainEventMessage<String> testEventOne = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1", testMetaData
+        );
+        DomainEventMessage<String> testEventTow = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2", testMetaData
+        );
+        DomainEventMessage<String> testEventThree = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3", testMetaData
+        );
+
+        testSubject.storeSnapshot(testSnapshot);
+        testSubject.publish(testEventOne, testEventTow, testEventThree);
 
         // Snapshot storage is async, so we need to make sure the first event through "readEvents" is the snapshot
         assertWithin(2, TimeUnit.SECONDS, () -> {
@@ -411,12 +454,21 @@ class AxonServerEventStoreTest {
                                           .build();
 
         Map<String, String> testMetaData = Collections.singletonMap("key", "value");
-        testSubject.storeSnapshot(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1", testMetaData)
+        DomainEventMessage<String> testSnapshot = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1", testMetaData
         );
-        testSubject.publish(new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, "Test1", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Test2", testMetaData),
-                            new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, "Test3", testMetaData));
+        DomainEventMessage<String> testEventOne = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), "Test1", testMetaData
+        );
+        DomainEventMessage<String> testEventTwo = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), "Test2", testMetaData
+        );
+        DomainEventMessage<String> testEventThree = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), "Test3", testMetaData
+        );
+
+        testSubject.storeSnapshot(testSnapshot);
+        testSubject.publish(testEventOne, testEventTwo, testEventThree);
 
         // Snapshot storage is async, so we need to make sure the first event through "readEvents" is the snapshot
         assertWithin(2, TimeUnit.SECONDS, () -> {
@@ -441,6 +493,7 @@ class AxonServerEventStoreTest {
 
         assertFalse(resultStream.hasNext());
     }
+
     @Test
     void rethrowStatusRuntimeExceptionAsEventStoreExceptionIfNotOfTypeUnknown() {
         String testAggregateId = AGGREGATE_ID;
@@ -464,14 +517,21 @@ class AxonServerEventStoreTest {
         //noinspection unchecked
         Map<String, Object> testMetaData = Collections.EMPTY_MAP;
 
-        testSubject.storeSnapshot(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, "Snapshot1", testMetaData)
+        DomainEventMessage<String> testSnapshot = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.snapshot"), "Snapshot1", testMetaData
         );
-        testSubject.publish(
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 0, testPayloadOne, testMetaData),
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 1, testPayloadTwo, testMetaData),
-                new GenericDomainEventMessage<>(AGGREGATE_TYPE, AGGREGATE_ID, 2, testPayloadThree, testMetaData)
+        DomainEventMessage<String> testEventOne = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 0, dottedName("test.event"), testPayloadOne, testMetaData
         );
+        DomainEventMessage<String> testEventTwo = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 1, dottedName("test.event"), testPayloadTwo, testMetaData
+        );
+        DomainEventMessage<String> testEventThree = new GenericDomainEventMessage<>(
+                AGGREGATE_TYPE, AGGREGATE_ID, 2, dottedName("test.event"), testPayloadThree, testMetaData
+        );
+
+        testSubject.storeSnapshot(testSnapshot);
+        testSubject.publish(testEventOne, testEventTwo, testEventThree);
         // Throw an exception if the snapshot is read,
         //  but stick with the default IllegalStateException to proceed with events.
         eventStore.setSnapshotFailure(snapshotRequest -> snapshotRequest.getAggregateId().equals(AGGREGATE_ID));
